client-kaniko-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: client
  name: client-kaniko
spec:
  replicas: 2
  selector:
    matchLabels:
      app: client
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: client
    spec:
      containers:
        - image: swarntech/client
          name: client
          ports:
            - containerPort: 3000
