server-kaniko-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: server-kaniko
  name: server-kaniko
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server-kaniko
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: server-kaniko
    spec:
      containers:
        - image: swarntech/server
          name: server
          ports:
            - containerPort: 8000
