server-kaniko-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-kaniko-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    app: server-kaniko
  ports:
    - port: 80
      targetPort: 8000
